syntax="proto3";

package product;

message ProductRequest {
  int64 id = 1;
}

message ProductResponse {
  int64 id = 1;
  string name = 2;
  int32 amount = 3;
}

message DeleteProductResponse{
  bool isDelete = 1;
}

service ProductService{

  rpc getProduct(ProductRequest) returns (ProductResponse);

  rpc deleteProduct(ProductRequest) returns (DeleteProductResponse);

}